Remove obsolete localization files and deprecated mixins, Added language data gen.
The 'en_us.json' and 'nl_nl.json' files in resources have been removed along with the outdated `GuiGraphicsMixin`. A new generated 'en_us.json' replaces these files, centralizing localization to the PathosLangProvider.java. Also moved the custom tool tip rendering into the ToolTipHandler.java and updated the QuestSlotButton.java to use the custom tool tip rendering on the quests.